--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
