--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "start": "node public/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q public/app.js\"",
+    "dev": "concurrently \"npx tsc -w\" \"npx tsc-alias -w\" \"nodemon -q public/app.js\"",
     "debug": "tsc && tsc-alias && node --inspect public/app.js"
   },
   "author": "",
@@ -15,13 +15,16 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.18",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.3",
