--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@models/*": ["models/*"],
       "@views/*": ["views/*"],
       "@routes/*": ["routes/*"],
+      "@controllers/*": ["controllers/*"],
       "@/*": ["@/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
