--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.18",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "concurrently": "^8.2.1",
